--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
               </div>
             </div>
 
-            <div>
+            <div claas="modal-field">
               <label class="modal-input-label"> Comment</label>
               <textarea
                 class="input-label-textarea"
