--- a/index.html
+++ b/index.html
@@ -506,12 +506,11 @@
 
         <div class="e-mail-input">
           <form class="form" name="issue_report_form" autocomplete="off">
-            <label class="form-label" for="form-input-email">Subscribe</label>
+            <p class="form-text">Subscribe</p>
             <div class="submit-btn">
               <input
                 class="form-input"
                 type="email"
-                id="form-input-email"
                 name="E-mail"
                 placeholder="E-mail"
                 name="user-email"
