--- a/index.html
+++ b/index.html
@@ -504,25 +504,48 @@
           </ul>
         </div>
 
-        <div class="e-mail-input">
+        <!-- <div class="e-mail-input">
+          <p class="form-text">Subscribe</p>
           <form class="form" name="issue_report_form" autocomplete="off">
-            <p class="form-text">Subscribe</p>
-            <div class="submit-btn">
+            <label class="form-label" for="form-input-email">
               <input
                 class="form-input"
                 type="email"
+                id="form-input-email"
                 name="E-mail"
                 placeholder="E-mail"
                 name="user-email"
-                autofocus
+            /></label>
+            <button class="form-btn" type="submit">
+              Subscribe
+              <svg class="send-icon" width="24" height="20">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </form> -->
+        <!-- </div> -->
+        <div class="subscribe-box">
+          <p class="subscribe-text">Subscribe</p>
+          <form
+            class="subscribe-form"
+            name="issue_report_form"
+            autocomplete="off"
+          >
+            <label class="form-label" for="form-input-email">
+              <input
+                class="form-input"
+                type="email"
+                id="form-input-email"
+                name="user-email"
+                placeholder="E-mail"
               />
-              <button class="form-btn" type="submit">
-                Subscribe
-                <svg class="send-icon" width="24" height="20">
-                  <use href="./images/icons.svg#icon-icon-send"></use>
-                </svg>
-              </button>
-            </div>
+            </label>
+            <button class="form-btn" type="submit">
+              Subscribe
+              <svg class="send-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
