--- a/index.html
+++ b/index.html
@@ -504,26 +504,6 @@
           </ul>
         </div>
 
-        <!-- <div class="e-mail-input">
-          <p class="form-text">Subscribe</p>
-          <form class="form" name="issue_report_form" autocomplete="off">
-            <label class="form-label" for="form-input-email">
-              <input
-                class="form-input"
-                type="email"
-                id="form-input-email"
-                name="E-mail"
-                placeholder="E-mail"
-                name="user-email"
-            /></label>
-            <button class="form-btn" type="submit">
-              Subscribe
-              <svg class="send-icon" width="24" height="20">
-                <use href="./images/icons.svg#icon-icon-send"></use>
-              </svg>
-            </button>
-          </form> -->
-        <!-- </div> -->
         <div class="subscribe-box">
           <p class="subscribe-text">Subscribe</p>
           <form
@@ -543,7 +523,7 @@
             <button class="form-btn" type="submit">
               Subscribe
               <svg class="send-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-send"></use>
+                <use href="./images/icons.svg#icon-icon-send"></use>
               </svg>
             </button>
           </form>
@@ -551,7 +531,7 @@
       </div>
     </footer>
 
-    <!------------ MODAL SECTION ------------>
+    <!---------- MODAL SECTION ------------>
 
     <div class="modal-section">
       <div class="modal">
