--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
       </div>
     </footer>
 
-    <!---------- MODAL SECTION ------------>
+    <!------------ MODAL SECTION ------------>
 
     <div class="modal-section">
       <div class="modal">
@@ -541,86 +541,102 @@
           </svg>
         </button>
 
-        <p class="titel-modal">Leave your contacts and we will call you back</p>
-        <div class="modal-input">
-          <form class="form">
-            <div class="modal-field">
-              <label class="modal-input-label" for="input-name">Name</label>
-              <div class="modal-input">
-                <input
-                  class="input-label"
-                  type="text"
-                  id="input-name"
-                  name="user-name"
-                  autofocus
-                />
-                <svg class="user-icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
-                </svg>
-              </div>
-            </div>
+        <p class="title-modal">Leave your contacts and we will call you back</p>
 
-            <div class="modal-field">
-              <label class="modal-input-label" for="input-phone">Phone</label>
-              <div class="modal-input">
-                <input
-                  class="input-label"
-                  type="tel"
-                  id="input-phone"
-                  name="user-phone"
-                  autofocus
-                />
-                <svg class="user-icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
-                </svg>
-              </div>
-            </div>
+        <!-- Форма -->
 
-            <div class="modal-field">
-              <label class="modal-input-label" for="input-e-mail">E-mail</label>
-              <div class="modal-input">
-                <input
-                  class="input-label"
-                  type="email"
-                  id="input-e-mail"
-                  name="user-e-mail"
-                  autofocus
-                />
-                <svg class="user-icon" width="18" height="24">
-                  <use href="./images/icons.svg#icon-Vector"></use>
-                </svg>
-              </div>
-            </div>
+        <form class="form">
+          <!-- Name -->
 
-            <div claas="modal-field">
-              <label class="modal-input-label"> Comment</label>
-              <textarea
-                class="input-label-textarea"
-                name="user-message"
-                class="user-message"
-                placeholder="Text input"
-              ></textarea>
-            </div>
-            <div class="order-form-policy">
+          <div class="modal-field">
+            <label class="modal-input-label" for="input-name">Name</label>
+            <div class="modal-input">
               <input
-                class="order-form-policy-checkbox is-hidden"
-                type="checkbox"
-                name=""
-                id="policy-checkbox"
+                class="input-label"
+                type="text"
+                id="input-name"
+                name="user-name"
+                autofocus
               />
-              <label class="order-form-check-box-label" for="policy-checkbox">
-                <span class="order-from-own-checkbox">
-                  <svg class="review-from-checkbox-icon" width="10" height="8">
-                    <use href="./images/icons.svg#icon-Vector-1"></use>
-                  </svg>
-                </span>
-                I accept the terms and conditions of the
-                <a class="privacy-polici" href>Privacy Policy</a>
-              </label>
+              <svg class="user-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+              </svg>
             </div>
-            <button class="send-btn" type="submit">Send</button>
-          </form>
-        </div>
+          </div>
+
+          <!-- Phone -->
+
+          <div class="modal-field">
+            <label class="modal-input-label" for="input-phone">Phone</label>
+            <div class="modal-input">
+              <input
+                class="input-label"
+                type="tel"
+                id="input-phone"
+                name="user-phone"
+                autofocus
+              />
+              <svg class="user-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+              </svg>
+            </div>
+          </div>
+
+          <!-- Email -->
+
+          <div class="modal-field">
+            <label class="modal-input-label" for="input-e-mail">E-mail</label>
+            <div class="modal-input">
+              <input
+                class="input-label"
+                type="email"
+                id="input-e-mail"
+                name="user-e-mail"
+                autofocus
+              />
+              <svg class="user-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-Vector"></use>
+              </svg>
+            </div>
+          </div>
+
+          <!-- Comment -->
+
+          <div claas="modal-field">
+            <label class="modal-input-label" for="user-message"> Comment</label>
+            <textarea
+              class="input-label-textarea"
+              name="user-message"
+              placeholder="Text input"
+              id="user-message"
+            ></textarea>
+          </div>
+
+          <!-- Checkbox -->
+
+          <div class="order-form-policy">
+            <input
+              class="order-form-policy-checkbox is-hidden"
+              type="checkbox"
+              name="Policy"
+              id="policy-checkbox"
+            />
+            <label class="order-from-check-box-label" for="policy-checkbox">
+              <span class="order-from-own-checkbox">
+                <svg class="review-from-checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-Vector-1"></use>
+                </svg>
+              </span>
+
+              I accept the terms and conditions of the
+              <a class="privacy-policy" href>Privacy Policy</a>
+            </label>
+          </div>
+
+          <!-- Submit button -->
+
+          <button class="send-btn" type="submit">Send</button>
+        </form>
       </div>
     </div>
   </body>
