--- a/index.html
+++ b/index.html
@@ -548,13 +548,13 @@
         <form class="form">
           <!-- Name -->
 
-          <div class="modal-field">
-            <label class="modal-input-label" for="input-name">Name</label>
-            <div class="modal-input">
+          <div class="modal_field">
+            <label class="modal-input-label" for="user-name">Name</label>
+            <div class="modal_input">
               <input
                 class="input-label"
                 type="text"
-                id="input-name"
+                id="user-name"
                 name="user-name"
                 autofocus
               />
@@ -566,9 +566,9 @@
 
           <!-- Phone -->
 
-          <div class="modal-field">
+          <div class="modal_field">
             <label class="modal-input-label" for="input-phone">Phone</label>
-            <div class="modal-input">
+            <div class="modal_input">
               <input
                 class="input-label"
                 type="tel"
@@ -584,9 +584,9 @@
 
           <!-- Email -->
 
-          <div class="modal-field">
+          <div class="modal_field">
             <label class="modal-input-label" for="input-e-mail">E-mail</label>
-            <div class="modal-input">
+            <div class="modal_input">
               <input
                 class="input-label"
                 type="email"
@@ -602,7 +602,7 @@
 
           <!-- Comment -->
 
-          <div claas="modal-field">
+          <div claas="modal_field">
             <label class="modal-input-label" for="user-message"> Comment</label>
             <textarea
               class="input-label-textarea"
@@ -614,14 +614,15 @@
 
           <!-- Checkbox -->
 
-          <div class="order-form-policy">
+          <div class="order_form_policy">
             <input
-              class="order-form-policy-checkbox is-hidden"
+              class="visually-hidden is-hidden"
               type="checkbox"
-              name="Policy"
-              id="policy-checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
             />
-            <label class="order-from-check-box-label" for="policy-checkbox">
+            <label class="order-from-check-box-label" for="user-privacy">
               <span class="order-from-own-checkbox">
                 <svg class="review-from-checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector-1"></use>
