--- a/index.html
+++ b/index.html
@@ -603,12 +603,12 @@
           <!-- Comment -->
 
           <div claas="modal_field">
-            <label class="modal-input-label" for="user-message"> Comment</label>
+            <label class="modal-input-label" for="user-comment"> Comment</label>
             <textarea
               class="input-label-textarea"
-              name="user-message"
+              name="user-comment"
               placeholder="Text input"
-              id="user-message"
+              id="user-comment"
             ></textarea>
           </div>
 
