--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
     <!------------ MODAL SECTION ------------>
 
     <div class="modal-section">
-      <div class="modal">
+      <div class="modal-window">
         <button class="modal-close-btn" type="button">
           <svg class="close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
@@ -585,7 +585,7 @@
           <!-- Email -->
 
           <div class="modal_field">
-            <label class="modal-input-label" for="input-e-mail">E-mail</label>
+            <label class="modal-input-label" for="input-e-mail">Email</label>
             <div class="modal_input">
               <input
                 class="input-label"
