--- a/index.html
+++ b/index.html
@@ -548,9 +548,9 @@
         <form class="form">
           <!-- Name -->
 
-          <div class="modal_field">
+          <div class="modal-field">
             <label class="modal-input-label" for="user-name">Name</label>
-            <div class="modal_input">
+            <div class="modal-input">
               <input
                 class="input-label"
                 type="text"
@@ -566,9 +566,9 @@
 
           <!-- Phone -->
 
-          <div class="modal_field">
+          <div class="modal-field">
             <label class="modal-input-label" for="input-phone">Phone</label>
-            <div class="modal_input">
+            <div class="modal-input">
               <input
                 class="input-label"
                 type="tel"
@@ -584,9 +584,9 @@
 
           <!-- Email -->
 
-          <div class="modal_field">
+          <div class="modal-field">
             <label class="modal-input-label" for="input-e-mail">Email</label>
-            <div class="modal_input">
+            <div class="modal-input">
               <input
                 class="input-label"
                 type="email"
@@ -602,7 +602,7 @@
 
           <!-- Comment -->
 
-          <div claas="modal_field">
+          <div claas="modal-field">
             <label class="modal-input-label" for="user-comment"> Comment</label>
             <textarea
               class="input-label-textarea"
@@ -614,7 +614,7 @@
 
           <!-- Checkbox -->
 
-          <div class="order_form_policy">
+          <div class="order-form-policy">
             <input
               class="visually-hidden is-hidden"
               type="checkbox"
