--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
 
           <!-- Comment -->
 
-          <div claas="modal-field">
+          <div class="modal-field modal-field-textarea">
             <label class="modal-input-label" for="user-comment"> Comment</label>
             <textarea
               class="input-label-textarea"
