--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
 
     <!------------ MODAL SECTION ------------>
 
-    <div class="modal-section">
+    <div class="modal-section is-open">
       <div class="modal-window">
         <button class="modal-close-btn" type="button">
           <svg class="close-icon" width="8" height="8">
@@ -616,7 +616,7 @@
 
           <div class="order-form-policy">
             <input
-              class="visually-hidden is-hidden"
+              class="checkbox visually-hidden is-hidden"
               type="checkbox"
               name="user-privacy"
               id="user-privacy"
