--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
 
     <!------------ MODAL SECTION ------------>
 
-    <div class="modal-section is-open">
+    <div class="modal-section">
       <div class="modal-window">
         <button class="modal-close-btn" type="button">
           <svg class="close-icon" width="8" height="8">
